--- a/app/src/main/res/layout/activity_billing.xml
+++ b/app/src/main/res/layout/activity_billing.xml
@@ -202,7 +202,7 @@
                android:background="@drawable/bg_call_to_action"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/white"
-               android:text="@string/continue_to_schedule"></com.haris.meal4u.TextviewUtil.NormalTextview>
+               android:text="@string/continue_to_schedule"/>
 
        </LinearLayout>
 
