--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -28,7 +28,7 @@
             android:paddingEnd="5dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
-            android:id="@+id/recycler_view_chatting"></android.support.v7.widget.RecyclerView>
+            android:id="@+id/recycler_view_chatting"/>
 
         <com.haris.meal4u.TextviewUtil.TaglineTextview
             android:id="@+id/txt_typing"
@@ -39,7 +39,7 @@
             android:textColor="?attr/colorTagline"
             android:text="Rider is typing..."
             android:visibility="gone"
-            android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+            android:textSize="@dimen/tagline_text_size"/>
 
 
         <LinearLayout
@@ -66,7 +66,7 @@
                 android:textColor="?attr/colorNormal"
                 android:textSize="@dimen/normal_text_size"
                 android:background="@drawable/bg_chat"
-                ></com.haris.meal4u.EditTextUtil.NormalEditText>
+                />
 
 
             <LinearLayout
@@ -83,7 +83,7 @@
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:src="@drawable/ic_send_message"
-                    android:tint="@color/white"></ImageView>
+                    android:tint="@color/white"/>
 
             </LinearLayout>
 
