--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -10,6 +10,7 @@
         android:id="@+id/layout_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_collapseMode="parallax"
         app:layout_collapseParallaxMultiplier="0.7">
 
@@ -110,7 +111,7 @@
                     android:layout_marginBottom="2dp"
                     android:text="Pizza Hut"
                     android:textColor="?attr/colorNormal"
-                    android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                    android:textSize="@dimen/normal_text_size" />
 
 
                 <com.haris.meal4u.TextviewUtil.NormalTextview
@@ -130,7 +131,7 @@
                     android:paddingEnd="5dp"
                     android:text="Open"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                    android:textSize="@dimen/tagline_text_size" />
 
 
                 <com.haris.meal4u.TextviewUtil.TaglineTextview
@@ -140,7 +141,7 @@
                     android:layout_below="@+id/txt_name"
                     android:text="Bar BQ , Fast Food"
                     android:textColor="?attr/colorTagline"
-                    android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                    android:textSize="@dimen/tagline_text_size" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -157,7 +158,7 @@
                         android:layout_height="30dp"
                         android:padding="7dp"
                         android:src="@drawable/ic_btn_mark_favourite"
-                        android:tint="?attr/colorDefaultFavouriteIcon"></ImageView>
+                        android:tint="?attr/colorDefaultFavouriteIcon" />
 
 
                 </LinearLayout>
@@ -184,7 +185,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/delivery"
                         android:textColor="?attr/colorTagline"
-                        android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                        android:textSize="@dimen/tagline_text_size" />
 
                     <com.haris.meal4u.TextviewUtil.NormalTextview
                         android:id="@+id/txt_delivery_time"
@@ -192,7 +193,7 @@
                         android:layout_height="wrap_content"
                         android:text="45 min"
                         android:textColor="?attr/colorNormal"
-                        android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                        android:textSize="@dimen/normal_text_size" />
 
 
                 </LinearLayout>
@@ -210,7 +211,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/minimum"
                         android:textColor="?attr/colorTagline"
-                        android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                        android:textSize="@dimen/tagline_text_size" />
 
                     <com.haris.meal4u.TextviewUtil.NormalTextview
                         android:id="@+id/txt_minimum_charges"
@@ -218,7 +219,7 @@
                         android:layout_height="wrap_content"
                         android:text="Rs 200"
                         android:textColor="?attr/colorNormal"
-                        android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                        android:textSize="@dimen/normal_text_size" />
 
 
                 </LinearLayout>
@@ -236,7 +237,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/cost"
                         android:textColor="?attr/colorTagline"
-                        android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                        android:textSize="@dimen/tagline_text_size" />
 
                     <com.haris.meal4u.TextviewUtil.NormalTextview
                         android:id="@+id/txt_expense"
@@ -244,7 +245,7 @@
                         android:layout_height="wrap_content"
                         android:text="RRR"
                         android:textColor="?attr/colorNormal"
-                        android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                        android:textSize="@dimen/normal_text_size" />
 
 
                 </LinearLayout>
@@ -262,7 +263,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/rating"
                         android:textColor="?attr/colorTagline"
-                        android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                        android:textSize="@dimen/tagline_text_size" />
 
                     <com.haris.meal4u.TextviewUtil.NormalTextview
                         android:id="@+id/txt_rating"
@@ -270,7 +271,7 @@
                         android:layout_height="wrap_content"
                         android:text="4.5"
                         android:textColor="?attr/colorNormal"
-                        android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                        android:textSize="@dimen/normal_text_size" />
 
 
                 </LinearLayout>
@@ -288,7 +289,7 @@
             android:layout_below="@+id/layout_detail"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
-            android:background="?attr/colorTagline"></TextView>
+            android:background="?attr/colorTagline" />
 
         <LinearLayout
             android:id="@+id/layout_comment"
@@ -318,7 +319,7 @@
                 android:gravity="center_vertical"
                 android:text="@string/review_tagline"
                 android:textColor="?attr/colorTagline"
-                android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+                android:textSize="@dimen/tagline_text_size" />
 
 
             <ImageView
@@ -328,7 +329,7 @@
                 android:layout_marginEnd="10dp"
                 android:padding="8dp"
                 android:src="@drawable/ic_forward"
-                android:tint="?attr/colorDefaultNavigationIcon"></ImageView>
+                android:tint="?attr/colorDefaultNavigationIcon" />
 
 
         </LinearLayout>
@@ -360,7 +361,7 @@
             android:layout_marginBottom="6dp"
             app:layout_collapseMode="pin"
             app:tabIndicatorHeight="1dp"
-            app:tabMode="scrollable"></android.support.design.widget.TabLayout>
+            app:tabMode="scrollable" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager_categories"
@@ -417,7 +418,7 @@
             android:layout_centerInParent="true"
             android:text="@string/view_your_cart"
             android:textColor="@color/white"
-            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+            android:textSize="@dimen/normal_text_size" />
 
 
         <com.haris.meal4u.TextviewUtil.NormalTextview
@@ -428,7 +429,7 @@
             android:layout_centerVertical="true"
             android:text="$ 2000"
             android:textColor="@color/white"
-            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+            android:textSize="@dimen/normal_text_size" />
 
 
     </RelativeLayout>
