--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -3,24 +3,85 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorBackground">
+    android:background="?attr/colorBackground"
+    android:paddingBottom="50dp">
 
+    <LinearLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="?attr/colorBottomNavigation">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_user_location"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="7dp"
+            android:paddingEnd="7dp">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_search"
+                android:tint="?attr/colorBottomNavigation" />
+
+
+            <com.haris.meal4u.TextviewUtil.NormalTextview
+                android:id="@+id/edit_search"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:background="?attr/colorCard"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="Search"
+                android:textColor="?attr/colorHeading"
+                android:textColorHint="?attr/colorHeading"
+                android:textSize="@dimen/normal_text_size" />
+
+            <ImageView
+                android:id="@+id/btnShoppingCart"
+                android:layout_width="40dp"
+                android:layout_height="25dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_shopping_cart_outline"
+                android:tint="?attr/colorBottomNavigation" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/layout_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:layout_below="@+id/toolbar"
         app:layout_collapseMode="parallax"
         app:layout_collapseParallaxMultiplier="0.7">
 
-        <ImageView
-            android:id="@+id/image_cover"
+        <ss.com.bannerslider.Slider
+            android:id="@+id/banner_slider1"
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_gravity="bottom"
             android:scaleType="centerCrop"
-            android:src="@drawable/app_icon" />
+            app:slider_loopSlides="true"
+            app:slider_animateIndicators="true"
+            android:src="@drawable/app_icon"
+            app:slider_interval="5000" />
 
         <RelativeLayout
             android:id="@+id/layout_menu"
@@ -28,7 +89,7 @@
             android:layout_height="50dp"
             android:background="@drawable/bg_gradient_menu"
             android:paddingRight="6dp"
-            android:visibility="visible">
+            android:visibility="gone">
 
 
             <ImageView
@@ -39,7 +100,7 @@
                 android:padding="8dp"
                 android:src="@drawable/ic_back"
                 android:tint="@color/white"
-                android:visibility="visible" />
+                android:visibility="invisible" />
 
 
             <LinearLayout
@@ -95,7 +156,8 @@
             android:gravity="center_vertical"
             android:orientation="vertical"
             android:paddingTop="10dp"
-            android:paddingBottom="6dp">
+            android:paddingBottom="6dp"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -211,7 +273,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/minimum"
                         android:textColor="?attr/colorTagline"
-                        android:textSize="@dimen/tagline_text_size" />
+                        android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
 
                     <com.haris.meal4u.TextviewUtil.NormalTextview
                         android:id="@+id/txt_minimum_charges"
@@ -298,7 +360,8 @@
             android:layout_below="@+id/txt_border"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingStart="10dp">
+            android:paddingStart="10dp"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:id="@+id/scroller_comment"
@@ -340,7 +403,7 @@
             android:layout_below="@+id/layout_comment"
             android:layout_marginTop="0dp"
             android:layout_marginBottom="0dp"
-            android:background="?attr/colorTagline"></TextView>
+            android:background="?attr/colorTagline" />
 
 
     </RelativeLayout>
@@ -366,10 +429,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/view_pager_categories"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v4.view.ViewPager>
-
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
