--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -70,18 +70,16 @@
                     android:id="@+id/edit_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginStart="13dp"
-                    android:layout_marginEnd="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_weight="1"
                     android:background="@color/transparent"
-                    android:hint="@string/email_address"
+                    android:hint="@string/phone_number"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
-                    android:textSize="14sp"
-
-                    />
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
