--- a/app/src/main/res/layout/activity_product_cart.xml
+++ b/app/src/main/res/layout/activity_product_cart.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginBottom="10dp"
-            ></android.support.v7.widget.RecyclerView>
+            />
 
 
         <TextView
@@ -232,7 +232,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="?attr/colorNormal"
                     android:textSize="@dimen/tagline_text_size"
-                    android:text="$ 300 /-"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                    android:text="$ 300 /-"/>
 
 
             </LinearLayout>
@@ -258,7 +258,7 @@
                 android:background="@drawable/bg_call_to_action"
                 android:textSize="@dimen/normal_text_size"
                 android:textColor="@color/white"
-                android:text="@string/proceed_to_checkout"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                android:text="@string/proceed_to_checkout"/>
 
         </LinearLayout>
 
