--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -54,8 +54,7 @@
                         android:layout_height="40dp"
                         android:padding="14dp"
                         android:src="@drawable/ic_minus"
-                        android:tint="?attr/colorTagline"></ImageView>
-
+                        android:tint="?attr/colorTagline"/>
 
                     <com.haris.meal4u.TextviewUtil.NormalTextview
                         android:id="@+id/txt_count"
@@ -68,8 +67,7 @@
                         android:layout_margin="7dp"
                         android:textSize="@dimen/normal_text_size"
                         android:textColor="?attr/colorNormal"
-                        android:text="0"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
+                        android:text="0"/>
 
                     <ImageView
                         android:id="@+id/btn_increase"
@@ -77,7 +75,7 @@
                         android:layout_height="40dp"
                         android:padding="14dp"
                         android:src="@drawable/ic_add"
-                        android:tint="?attr/colorNormal"></ImageView>
+                        android:tint="?attr/colorNormal"/>
 
 
                 </LinearLayout>
