--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -18,12 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="@dimen/tagline_text_size"
-            android:textColor="?attr/colorTagline"
+            android:textColor="?attr/colorPrimary"
             android:textColorHint="?attr/colorTagline"
             android:hint="@string/building"
             android:background="@drawable/bg_edit_text"
             android:gravity="center_vertical"
-            android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>
+            android:paddingStart="10dp"/>
 
 
         <LinearLayout
@@ -43,12 +43,12 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:textSize="@dimen/tagline_text_size"
-                android:textColor="?attr/colorTagline"
+                android:textColor="?attr/colorPrimary"
                 android:textColorHint="?attr/colorTagline"
                 android:background="@color/transparent"
                 android:hint="@string/street_address"
                 android:gravity="center_vertical"
-                android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>
+                android:paddingStart="10dp"/>
 
 
             <ImageView
@@ -58,7 +58,7 @@
                 android:layout_marginEnd="5dp"
                 android:padding="10dp"
                 android:src="@drawable/ic_location_pointer"
-                android:tint="?attr/colorTagline"></ImageView>
+                android:tint="?attr/colorTagline"/>
 
         </LinearLayout>
 
@@ -74,12 +74,12 @@
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="@dimen/tagline_text_size"
-               android:textColor="?attr/colorTagline"
+               android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorTagline"
                android:hint="@string/area"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
-               android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>
+               android:paddingStart="10dp"/>
 
            <com.haris.meal4u.EditTextUtil.NormalEditText
                android:id="@+id/edit_unit"
@@ -88,12 +88,12 @@
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/tagline_text_size"
-               android:textColor="?attr/colorTagline"
+               android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorTagline"
                android:hint="@string/floor_unit"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
-               android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>
+               android:paddingStart="10dp"/>
 
 
 
@@ -104,7 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:textSize="@dimen/tagline_text_size"
-            android:textColor="?attr/colorTagline"
+            android:textColor="?attr/colorPrimary"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:textColorHint="?attr/colorTagline"
@@ -112,7 +112,7 @@
             android:background="@drawable/bg_edit_text"
             android:gravity="top"
             android:paddingTop="15dp"
-            android:paddingStart="10dp"></com.haris.meal4u.EditTextUtil.NormalEditText>
+            android:paddingStart="10dp"/>
 
 
         <com.haris.meal4u.TextviewUtil.NormalTextview
@@ -126,7 +126,7 @@
             android:background="@drawable/bg_call_to_action"
             android:textSize="@dimen/normal_text_size"
             android:textColor="@color/white"
-            android:text="@string/proceed_to_billing"></com.haris.meal4u.TextviewUtil.NormalTextview>
+            android:text="@string/proceed_to_billing"/>
 
     </LinearLayout>
 
