--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorBackground"
-    tools:context=".ActivityUtil.Checkout">
+    tools:context=".ActivityUtil.CheckoutActivity">
 
 
     <LinearLayout
