--- a/app/src/main/res/layout/activity_picture_uploader.xml
+++ b/app/src/main/res/layout/activity_picture_uploader.xml
@@ -21,7 +21,7 @@
             android:id="@+id/recycler_view_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="3dp"></android.support.v7.widget.RecyclerView>
+            android:paddingLeft="3dp"/>
 
 
     </LinearLayout>
