--- a/app/src/main/res/layout/product_menu_item_layout.xml
+++ b/app/src/main/res/layout/product_menu_item_layout.xml
@@ -26,10 +26,13 @@
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/image_product"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="6dp"
-                android:scaleType="centerInside"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:paddingLeft="6dp"
+                android:paddingTop="12dp"
+                android:paddingRight="3dp"
+                android:paddingBottom="6dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/app_icon"
                 app:riv_corner_radius="5dp" />
 
