--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -48,8 +48,8 @@
                     android:layout_height="25dp"
                     android:layout_below="@+id/image_profile"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="-10dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/small_profile_camera"
                     android:gravity="center">
 
@@ -62,16 +62,15 @@
 
                 </LinearLayout>
 
-
             </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginBottom="6dp"
                 android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="6dp"
                 android:orientation="horizontal">
 
                 <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
@@ -103,9 +102,9 @@
                     android:paddingStart="13dp"
                     android:paddingEnd="5dp"
                     android:textColor="?attr/colorButton"
+                    android:textColorHint="?attr/colorButton"
                     android:textSize="14sp"
                     android:visibility="gone"
-                    android:textColorHint="?attr/colorButton"
 
                     />
 
@@ -114,49 +113,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:visibility="gone"
-                android:layout_marginBottom="6dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
-                android:orientation="horizontal">
-
-                <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="5dp"
-                    android:layout_weight="1"
-
-                    android:background="@drawable/bg_edit_text_login"
-                    android:gravity="center_vertical"
-                    android:hint="@string/email_address"
-                    android:inputType="textPhonetic"
-                    android:paddingStart="13dp"
-                    android:paddingEnd="5dp"
-                    android:textColor="?attr/colorButton"
-                    android:textColorHint="?attr/colorButton"
-                    android:textSize="14sp"
-
-                    />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
                 android:layout_marginBottom="6dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
                 android:orientation="horizontal">
 
                 <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
                     android:id="@+id/edit_phone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:enabled="false"
                     android:layout_marginEnd="5dp"
-                    android:layout_weight="1"
                     android:background="@drawable/bg_edit_text_login"
+                    android:enabled="false"
                     android:gravity="center_vertical"
                     android:hint="@string/phone_number"
                     android:inputType="textEmailAddress"
@@ -164,16 +132,24 @@
                     android:paddingEnd="5dp"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
-                    android:textSize="14sp"
+                    android:textSize="14sp" />
 
-                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="6dp"
+                android:orientation="horizontal">
 
 
                 <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
                     android:id="@+id/edit_password"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
                     android:background="@drawable/bg_edit_text_login"
                     android:gravity="center_vertical"
                     android:hint="@string/password"
@@ -206,7 +182,6 @@
                 android:textSize="14sp"
 
                 />
-
 
 
             <!-- <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
@@ -247,6 +222,6 @@
 
 
     </LinearLayout>
-    
-    
+
+
 </RelativeLayout>
