--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -7,53 +7,40 @@
     android:background="@color/transparent"
     tools:context=".ActivityUtil.Base">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/layout_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/colorBackground"
+        android:paddingBottom="0dp" />
+
+    <LinearLayout
+        android:id="@+id/layout_search"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/bg_fab"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:padding="5dp"
+            android:src="@drawable/ic_menu_home" />
+
+    </LinearLayout>
+
+    <com.haris.meal4u.CustomUtil.CurvedBottomNavigationView
+        android:id="@+id/customBottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
         android:background="@color/transparent"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/layout_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="?attr/colorBackground"
-            android:paddingBottom="0dp"></FrameLayout>
-
-        <LinearLayout
-            android:id="@+id/layout_search"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="35dp"
-            android:background="@drawable/bg_fab"
-            android:gravity="center"
-
-            >
-
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:padding="5dp"
-                android:src="@drawable/ic_search"></ImageView>
-
-
-        </LinearLayout>
-
-        <com.haris.meal4u.CustomUtil.CurvedBottomNavigationView
-            android:id="@+id/customBottomBar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/transparent"
-            app:itemIconSize="18dp"
-            app:itemIconTint="@color/bnv_tab_item_foreground"
-            app:labelVisibilityMode="unlabeled" />
-
-    </RelativeLayout>
+        app:itemIconSize="18dp"
+        app:itemIconTint="@color/bnv_tab_item_foreground"
+        app:labelVisibilityMode="unlabeled" />
 
 </RelativeLayout>
 
