--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -35,32 +35,33 @@
                 android:tint="?attr/colorBottomNavigation" />
 
 
-            <com.haris.meal4u.TextviewUtil.NormalTextview
+            <EditText
                 android:id="@+id/edit_search"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:layout_weight="1"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
                 android:background="?attr/colorCard"
                 android:focusableInTouchMode="true"
                 android:gravity="center_vertical"
+                android:hint="Search"
                 android:maxLines="1"
-                android:text="Search"
                 android:textColor="?attr/colorHeading"
                 android:textColorHint="?attr/colorHeading"
                 android:textSize="@dimen/normal_text_size" />
 
             <ImageView
-                android:id="@+id/btnShoppingCart"
                 android:layout_width="40dp"
                 android:layout_height="25dp"
                 android:padding="5dp"
                 android:src="@drawable/ic_shopping_cart_outline"
-                android:tint="?attr/colorBottomNavigation" />
+                android:tint="?attr/colorBottomNavigation"
+                android:visibility="gone" />
 
 
         </LinearLayout>
-
 
     </LinearLayout>
 
@@ -78,10 +79,7 @@
             android:layout_height="170dp"
             android:layout_gravity="bottom"
             android:scaleType="centerCrop"
-            app:slider_loopSlides="true"
-            app:slider_animateIndicators="true"
-            android:src="@drawable/app_icon"
-            app:slider_interval="5000" />
+            android:src="@drawable/app_icon" />
 
         <RelativeLayout
             android:id="@+id/layout_menu"
@@ -416,11 +414,11 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-
         <android.support.design.widget.TabLayout
             android:id="@+id/layout_tab"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginBottom="6dp"
             app:layout_collapseMode="pin"
             app:tabIndicatorHeight="1dp"
@@ -493,5 +491,17 @@
 
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/btnShoppingCart"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="40dp"
+        android:background="@drawable/bg_call"
+        android:padding="15dp"
+        android:src="@drawable/ic_shopping_cart_outline"
+        android:visibility="gone" />
 
 </RelativeLayout>
