--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -24,35 +24,18 @@
             android:gravity="center"
             android:orientation="vertical">
 
-
-            <com.haris.meal4u.TextviewUtil.NeuroTextView
+            <ImageView
                 android:id="@+id/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/txt_information"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_marginBottom="65dp"
-                android:text="@string/app_name"
-                android:textColor="?attr/colorHeading"
-                android:textSize="25sp" />
-
-            <com.haris.meal4u.TextviewUtil.UbuntuLightTextview
-                android:id="@+id/txt_information"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="@string/forgot"
-                android:textColor="?attr/colorHeading"
-                android:textSize="15sp" />
-
+                android:contentDescription="@string/app_name"
+                android:src="@mipmap/ic_launcher" />
 
             <LinearLayout
                 android:layout_width="300dp"
                 android:layout_height="45dp"
-
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginBottom="35dp"
                 android:background="@drawable/bg_edit_text_login"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -62,7 +45,7 @@
                     android:layout_height="20dp"
                     android:layout_marginStart="12dp"
                     android:padding="4dp"
-                    android:src="@drawable/ic_email"
+                    android:src="@drawable/ic_phone"
                     android:tint="?attr/colorButton" />
 
 
@@ -77,6 +60,9 @@
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:hint="@string/phone_number"
+                    android:imeOptions="actionDone"
+                    android:maxLength="10"
+                    android:singleLine="true"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
                     android:textSize="14sp" />
@@ -84,6 +70,85 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/layoutOtp"
+                android:layout_width="300dp"
+                android:layout_height="45dp"
+                android:background="@drawable/bg_edit_text_login"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="12dp"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_password"
+                    android:tint="?attr/colorButton" />
+
+
+                <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
+                    android:id="@+id/edit_otp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="13dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:hint="OTP"
+                    android:imeOptions="actionDone"
+                    android:maxLength="6"
+                    android:singleLine="true"
+                    android:textColor="?attr/colorButton"
+                    android:textColorHint="?attr/colorButton"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutPassword"
+                android:layout_width="300dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginBottom="35dp"
+                android:background="@drawable/bg_edit_text_login"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="12dp"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_password"
+                    android:tint="?attr/colorButton" />
+
+
+                <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
+                    android:id="@+id/edit_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="13dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:hint="@string/password"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColor="?attr/colorButton"
+                    android:textColorHint="?attr/colorButton"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
 
             <com.haris.meal4u.TextviewUtil.UbuntuMediumTextview
                 android:id="@+id/txt_forgot"
@@ -93,10 +158,9 @@
                 android:background="@drawable/bg_internet"
                 android:gravity="center"
                 android:minHeight="45dp"
-                android:text="@string/reset"
+                android:text="Send OTP"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
-
 
         </LinearLayout>
 
