--- a/app/src/main/res/layout/activity_product_cart.xml
+++ b/app/src/main/res/layout/activity_product_cart.xml
@@ -22,9 +22,8 @@
             android:id="@+id/recycler_view_cart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:layout_marginBottom="10dp"
-            />
+            android:layout_weight="1" />
 
 
         <TextView
@@ -36,18 +35,17 @@
             android:id="@+id/layout_coupon"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:paddingStart="20dp"
             android:clickable="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="20dp">
 
             <LinearLayout
                 android:layout_width="55dp"
                 android:layout_height="55dp"
-                android:orientation="vertical"
-                android:gravity="center"
                 android:background="@drawable/bg_coupon"
-                >
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
                     android:layout_width="20dp"
@@ -62,32 +60,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:orientation="vertical"
                 android:layout_weight="1"
-                android:paddingStart="20dp"
                 android:gravity="center_vertical"
-                >
+                android:orientation="vertical"
+                android:paddingStart="20dp">
 
 
                 <com.haris.meal4u.TextviewUtil.LabelTextview
                     android:id="@+id/txt_apply_coupon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/apply_coupon"
                     android:textColor="?attr/colorBottomNavigation"
-                    android:textSize="@dimen/normal_text_size"
-                    android:text="@string/apply_coupon"></com.haris.meal4u.TextviewUtil.LabelTextview>
+                    android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.LabelTextview>
 
                 <com.haris.meal4u.TextviewUtil.TaglineTextview
                     android:id="@+id/txt_coupon_tagline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/tagline_text_size"
                     android:layout_marginTop="2dp"
-                    android:textColor="?attr/colorTagline"
                     android:text="@string/coupon_tagline"
-                    ></com.haris.meal4u.TextviewUtil.TaglineTextview>
-
-
+                    android:textColor="?attr/colorTagline"
+                    android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
 
 
             </LinearLayout>
@@ -98,10 +92,9 @@
                 android:layout_height="30dp"
                 android:layout_marginEnd="10dp"
                 android:padding="7dp"
-                android:visibility="gone"
-                android:tint="?attr/colorBottomNavigation"
                 android:src="@drawable/ic_done"
-                ></ImageView>
+                android:tint="?attr/colorBottomNavigation"
+                android:visibility="gone"></ImageView>
 
             <ImageView
                 android:id="@+id/image_more"
@@ -109,9 +102,8 @@
                 android:layout_height="30dp"
                 android:layout_marginEnd="10dp"
                 android:padding="8dp"
-                android:tint="?attr/colorDefaultNavigationIcon"
                 android:src="@drawable/ic_forward"
-                ></ImageView>
+                android:tint="?attr/colorDefaultNavigationIcon"></ImageView>
 
 
         </LinearLayout>
@@ -127,79 +119,30 @@
             android:orientation="vertical">
 
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:orientation="horizontal"
-               android:minHeight="45dp"
-               android:paddingStart="20dp"
-               android:paddingEnd="20dp"
-               android:gravity="center_vertical">
-
-               <com.haris.meal4u.TextviewUtil.NormalTextview
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:textColor="?attr/colorNormal"
-                   android:layout_weight="1"
-                   android:textSize="@dimen/tagline_text_size"
-                   android:text="@string/grand_total"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
-               <com.haris.meal4u.TextviewUtil.NormalTextview
-                   android:id="@+id/txt_grand_total"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:textColor="?attr/colorNormal"
-                   android:textSize="@dimen/tagline_text_size"
-                   android:text="$ 250 /-"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
-
-           </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:background="?attr/colorDefaultFavouriteIcon"></TextView>
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:minHeight="45dp"
+                android:orientation="horizontal"
                 android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:gravity="center_vertical">
+                android:paddingEnd="20dp">
 
                 <com.haris.meal4u.TextviewUtil.NormalTextview
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorNormal"
                     android:layout_weight="1"
-                    android:textSize="@dimen/tagline_text_size"
-                    android:text="@string/delivery_charges"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                    android:text="@string/grand_total"
+                    android:textColor="?attr/colorNormal"
+                    android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
 
                 <com.haris.meal4u.TextviewUtil.NormalTextview
-                    android:id="@+id/txt_delivery_charge"
+                    android:id="@+id/txt_grand_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="$ 250 /-"
                     android:textColor="?attr/colorNormal"
-                    android:visibility="gone"
-                    android:textSize="@dimen/tagline_text_size"
-                    android:text="$ 50 /-"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
-
-                <net.bohush.geometricprogressview.GeometricProgressView
-                    android:id="@+id/progress_bar"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerInParent="true"
-                    app:gp_color="?attr/colorPrimaryDark"
-                    app:gp_duration="800"
-                    android:visibility="visible"
-                    app:gp_figure_padding="1dp"
-                    app:gp_number_of_angles="20"
-                    app:gp_type="triangle" />
-
+                    android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
 
 
             </LinearLayout>
@@ -209,30 +152,117 @@
                 android:layout_height="1px"
                 android:background="?attr/colorDefaultFavouriteIcon"></TextView>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:minHeight="45dp"
+                android:orientation="horizontal"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:text="@string/delivery_charges"
+                    android:textColor="?attr/colorNormal"
+                    android:textSize="@dimen/tagline_text_size">
+
+                    <com.haris.meal4u.TextviewUtil.NormalTextview
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/delivery_charges"
+                        android:textColor="?attr/colorNormal"
+                        android:textSize="@dimen/tagline_text_size" />
+
+                    <com.haris.meal4u.TextviewUtil.NormalTextview
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Above 200 no delivery charges"
+                        android:textColor="?attr/colorNormal"
+                        android:textSize="10sp" />
+                </LinearLayout>
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_delivery_charge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="₹ 0 /-"
+                    android:textColor="?attr/colorNormal"
+                    android:textSize="@dimen/tagline_text_size" />
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="?attr/colorDefaultFavouriteIcon" />
+
+            <LinearLayout
+                android:id="@+id/lbl_discount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:minHeight="45dp"
+                android:orientation="horizontal"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
-                android:gravity="center_vertical">
+                android:visibility="gone">
 
                 <com.haris.meal4u.TextviewUtil.NormalTextview
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/colorNormal"
                     android:layout_weight="1"
-                    android:textSize="@dimen/tagline_text_size"
-                    android:text="@string/total"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                    android:text="Discount"
+                    android:textColor="?attr/colorNormal"
+                    android:textSize="@dimen/tagline_text_size" />
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_discount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="$ 300 /-"
+                    android:textColor="?attr/colorNormal"
+                    android:textSize="@dimen/tagline_text_size" />
+
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="?attr/colorDefaultFavouriteIcon" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:minHeight="45dp"
+                android:orientation="horizontal"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp">
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/total"
+                    android:textColor="?attr/colorNormal"
+                    android:textSize="@dimen/tagline_text_size" />
 
                 <com.haris.meal4u.TextviewUtil.NormalTextview
                     android:id="@+id/txt_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="$ 300 /-"
                     android:textColor="?attr/colorNormal"
-                    android:textSize="@dimen/tagline_text_size"
-                    android:text="$ 300 /-"/>
+                    android:textSize="@dimen/tagline_text_size" />
 
 
             </LinearLayout>
@@ -243,22 +273,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
             android:orientation="vertical">
 
             <com.haris.meal4u.TextviewUtil.NormalTextview
                 android:id="@+id/txt_add_to_cart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:background="@drawable/bg_call_to_action"
-                android:textSize="@dimen/normal_text_size"
+                android:gravity="center"
+                android:text="@string/proceed_to_checkout"
                 android:textColor="@color/white"
-                android:text="@string/proceed_to_checkout"/>
+                android:textSize="@dimen/normal_text_size" />
 
         </LinearLayout>
 
