--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,190 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorBackground">
+    android:layout_centerInParent="true"
+    android:background="?attr/colorBackground"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp">
+        android:layout_weight="1"
+        android:layout_height="0dp">
 
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_schedule"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp"
-            app:cardUseCompatPadding="true">
+            android:orientation="vertical">
+
+            <com.haris.meal4u.TextviewUtil.NormalTextview
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:text="Thank you! Your order has been placed successfully!"
+                android:textSize="20dp" />
+
+            <com.haris.meal4u.TextviewUtil.NormalTextview
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="30dp"
+                android:background="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textSize="30dp" />
+
+            <com.haris.meal4u.TextviewUtil.NormalTextview
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:text="Delivery Information"
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp">
-
-                <LinearLayout
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/bg_coupon"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_calendar"
-                        android:tint="?attr/colorBottomNavigation"></ImageView>
-
-
-                </LinearLayout>
+                android:padding="@dimen/default_text_size"
+                android:layout_height="wrap_content">
 
                 <com.haris.meal4u.TextviewUtil.NormalTextview
-                    android:id="@+id/txt_date_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:text="@string/schedule_order"
-                    android:textColor="?attr/colorNormal"
-                    android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="ORDER ID"
+                    android:textSize="@dimen/tagline_text_size" />
 
-                <ImageView
-                    android:id="@+id/image_schedule"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:padding="5dp"
-                    android:src="@drawable/ic_done"
-                    android:tint="?attr/colorBottomNavigation"
-                    android:visibility="gone"></ImageView>
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_order_id"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="#8596"
+                    android:textSize="@dimen/normal_text_size" />
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="15dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp">
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_weight="1"
-                android:background="?attr/colorTagline"></TextView>
+                android:padding="@dimen/default_text_size"
+                android:layout_height="wrap_content">
 
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="USER"
+                    android:textSize="@dimen/tagline_text_size" />
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_order_name"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="#8596"
+                    android:textSize="@dimen/normal_text_size" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:padding="@dimen/default_text_size"
+                android:layout_height="wrap_content">
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="ADDRESS"
+                    android:textSize="@dimen/tagline_text_size" />
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_order_address"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="#8596"
+                    android:textSize="@dimen/normal_text_size" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:padding="@dimen/default_text_size"
+                android:layout_height="wrap_content">
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="DATE"
+                    android:textSize="@dimen/tagline_text_size" />
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_order_date"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="#8596"
+                    android:textSize="@dimen/normal_text_size" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:padding="@dimen/default_text_size"
+                android:layout_height="wrap_content">
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="PAYMENT"
+                    android:textSize="@dimen/tagline_text_size" />
+
+                <com.haris.meal4u.TextviewUtil.NormalTextview
+                    android:id="@+id/txt_order_payment"
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/quantum_black_100"
+                    android:text="#8596"
+                    android:textSize="@dimen/normal_text_size" />
+
+            </LinearLayout>
 
             <com.haris.meal4u.TextviewUtil.NormalTextview
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="@string/alternative_method"
-                android:textColor="?attr/colorNormal"
-                android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
-
-            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_weight="1"
-                android:background="?attr/colorTagline"></TextView>
-
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:text="Order Items List"
+                android:textSize="20dp" />
 
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_now"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp"
-            app:cardUseCompatPadding="true">
+    </ScrollView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    <com.haris.meal4u.TextviewUtil.NormalTextview
+        android:id="@+id/txt_done"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_margin="30dp"
+        android:background="@drawable/bg_call_to_action"
+        android:gravity="center"
+        android:text="New Order"
+        android:textColor="@color/white"
+        android:textSize="@dimen/normal_text_size" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp">
-
-                    <LinearLayout
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:background="@drawable/bg_coupon"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-
-                        <ImageView
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
-                            android:padding="5dp"
-                            android:src="@drawable/ic_now"
-                            android:tint="?attr/colorBottomNavigation"></ImageView>
-
-
-                    </LinearLayout>
-
-                    <com.haris.meal4u.TextviewUtil.NormalTextview
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_weight="1"
-                        android:text="@string/order_now"
-                        android:textColor="?attr/colorNormal"
-                        android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
-                    <ImageView
-                        android:id="@+id/image_now"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_done"
-                        android:tint="?attr/colorBottomNavigation"
-                        android:visibility="gone"></ImageView>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-        </android.support.v7.widget.CardView>
-
-        <com.haris.meal4u.TextviewUtil.NormalTextview
-            android:id="@+id/txt_done"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="30dp"
-            android:background="@drawable/bg_call_to_action"
-            android:gravity="center"
-            android:text="@string/order"
-            android:textColor="@color/white"
-            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.NormalTextview>
-
-    </LinearLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
