--- a/app/src/main/res/layout/order_detail_item_layout.xml
+++ b/app/src/main/res/layout/order_detail_item_layout.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="5dp"
             android:text="Behari Kabab Pizza"
             android:textColor="?attr/colorTagline"
-            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+            android:textSize="@dimen/normal_text_size"/>
 
         <com.haris.meal4u.TextviewUtil.TaglineTextview
             android:id="@+id/txt_quantity"
@@ -30,7 +30,7 @@
             android:layout_marginStart="8dp"
             android:text="(x2)"
             android:textColor="?attr/colorTagline"
-            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+            android:textSize="@dimen/normal_text_size"/>
 
 
         <com.haris.meal4u.TextviewUtil.TaglineTextview
@@ -41,7 +41,7 @@
             android:layout_marginStart="8dp"
             android:text="$ 500"
             android:textColor="?attr/colorTagline"
-            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
+            android:textSize="@dimen/normal_text_size"/>
 
 
     </LinearLayout>
