--- a/app/src/main/res/layout/product_menu_item_layout.xml
+++ b/app/src/main/res/layout/product_menu_item_layout.xml
@@ -6,14 +6,12 @@
     android:background="?attr/colorBackground"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:id="@+id/layout_product"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
-
 
         <LinearLayout
             android:id="@+id/layout_image"
@@ -23,19 +21,14 @@
             android:orientation="horizontal"
             android:visibility="visible">
 
-
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/image_product"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:paddingLeft="6dp"
-                android:paddingTop="12dp"
-                android:paddingRight="3dp"
-                android:paddingBottom="6dp"
+                android:padding="12dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/app_icon"
+                android:src="@mipmap/ic_launcher_round"
                 app:riv_corner_radius="5dp" />
-
 
         </LinearLayout>
 
@@ -81,7 +74,6 @@
 
         </LinearLayout>
 
-
         <ImageView
             android:id="@+id/btn_decrease"
             android:layout_width="40dp"
@@ -110,7 +102,6 @@
             android:padding="14dp"
             android:src="@drawable/ic_add"
             android:tint="?attr/colorNormal" />
-
 
     </LinearLayout>
 
