--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -61,6 +61,7 @@
                     android:background="@color/transparent"
                     android:hint="@string/phone_number"
                     android:imeOptions="actionDone"
+                    android:inputType="phone"
                     android:maxLength="10"
                     android:singleLine="true"
                     android:textColor="?attr/colorButton"
