--- a/app/src/main/res/layout/activity_product_cart.xml
+++ b/app/src/main/res/layout/activity_product_cart.xml
@@ -25,93 +25,116 @@
             android:layout_marginBottom="10dp"
             android:layout_weight="1" />
 
-
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="?attr/colorDefaultFavouriteIcon"></TextView>
-
-        <LinearLayout
-            android:id="@+id/layout_coupon"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:clickable="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingStart="20dp">
-
-            <LinearLayout
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:background="@drawable/bg_coupon"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:padding="2dp"
-                    android:src="@drawable/ic_coupon"
-                    android:tint="?attr/colorBottomNavigation"></ImageView>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingStart="20dp">
-
-
-                <com.haris.meal4u.TextviewUtil.LabelTextview
-                    android:id="@+id/txt_apply_coupon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/apply_coupon"
-                    android:textColor="?attr/colorBottomNavigation"
-                    android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.LabelTextview>
-
-                <com.haris.meal4u.TextviewUtil.TaglineTextview
-                    android:id="@+id/txt_coupon_tagline"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="@string/coupon_tagline"
-                    android:textColor="?attr/colorTagline"
-                    android:textSize="@dimen/tagline_text_size"></com.haris.meal4u.TextviewUtil.TaglineTextview>
-
-
-            </LinearLayout>
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/image_done"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:id="@+id/remove_coupon_iv"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
                 android:padding="7dp"
-                android:src="@drawable/ic_done"
+                android:elevation="3dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_close"
                 android:tint="?attr/colorBottomNavigation"
-                android:visibility="gone"></ImageView>
+                android:visibility="gone" />
 
-            <ImageView
-                android:id="@+id/image_more"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginEnd="10dp"
-                android:padding="8dp"
-                android:src="@drawable/ic_forward"
-                android:tint="?attr/colorDefaultNavigationIcon"></ImageView>
+            <LinearLayout
+                android:id="@+id/line_lo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_alignParentTop="true"
+                    android:background="?attr/colorDefaultFavouriteIcon" />
+
+                <LinearLayout
+                    android:id="@+id/layout_coupon"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:clickable="true"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingStart="20dp">
+
+                    <LinearLayout
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                        android:background="@drawable/bg_coupon"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:padding="2dp"
+                            android:src="@drawable/ic_coupon"
+                            android:tint="?attr/colorBottomNavigation"></ImageView>
 
 
-        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:paddingStart="20dp">
+
+
+                        <com.haris.meal4u.TextviewUtil.LabelTextview
+                            android:id="@+id/txt_apply_coupon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/apply_coupon"
+                            android:textColor="?attr/colorBottomNavigation"
+                            android:textSize="@dimen/normal_text_size"></com.haris.meal4u.TextviewUtil.LabelTextview>
+
+                        <com.haris.meal4u.TextviewUtil.TaglineTextview
+                            android:id="@+id/txt_coupon_tagline"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/coupon_tagline"
+                            android:textColor="?attr/colorTagline"
+                            android:textSize="@dimen/tagline_text_size" />
+
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/image_done"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="40dp"
+                        android:padding="7dp"
+                        android:src="@drawable/ic_done"
+                        android:tint="?attr/colorBottomNavigation"
+                        android:visibility="gone" />
+
+                    <ImageView
+                        android:id="@+id/image_more"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:padding="8dp"
+                        android:visibility="visible"
+                        android:src="@drawable/ic_forward"
+                        android:tint="?attr/colorDefaultNavigationIcon" />
+
+
+                </LinearLayout>
+            </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="?attr/colorDefaultFavouriteIcon"></TextView>
+            android:background="?attr/colorDefaultFavouriteIcon" />
 
         <LinearLayout
             android:layout_width="match_parent"
