--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,7 +66,7 @@
                             android:layout_weight="1"
                             android:background="@color/transparent"
                             android:hint="@string/first_name"
-                            android:maxLines="1"
+                            android:singleLine="true"
                             android:textColor="?attr/colorButton"
                             android:textColorHint="?attr/colorButton"
                             android:textSize="14sp"
@@ -79,11 +79,11 @@
                     <LinearLayout
                         android:layout_width="300dp"
                         android:layout_height="45dp"
-                        android:visibility="gone"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/bg_edit_text_login"
                         android:gravity="center_vertical"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="gone">
 
 
                         <ImageView
@@ -173,8 +173,9 @@
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:hint="@string/phone_number"
-                    android:inputType="textPhonetic"
-                    android:maxLines="1"
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:singleLine="true"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
                     android:textSize="14sp"
@@ -213,7 +214,7 @@
                     android:background="@color/transparent"
                     android:hint="@string/email_address"
                     android:inputType="textEmailAddress"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
                     android:textSize="14sp"
@@ -254,7 +255,7 @@
                     android:background="@color/transparent"
                     android:hint="@string/password"
                     android:inputType="textPassword"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
                     android:textSize="14sp"
@@ -294,7 +295,7 @@
                     android:background="@color/transparent"
                     android:hint="@string/confirm_password"
                     android:inputType="textPassword"
-                    android:maxLines="1"
+                    android:singleLine="true"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
                     android:textSize="14sp"
