--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -124,7 +124,11 @@
                     android:layout_height="match_parent"
                     android:layout_marginEnd="5dp"
                     android:background="@drawable/bg_edit_text_login"
+                    android:clickable="false"
+                    android:cursorVisible="false"
                     android:enabled="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:gravity="center_vertical"
                     android:hint="@string/phone_number"
                     android:inputType="textEmailAddress"
@@ -151,6 +155,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_edit_text_login"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:gravity="center_vertical"
                     android:hint="@string/password"
                     android:inputType="textPassword"
@@ -158,9 +166,7 @@
                     android:paddingEnd="5dp"
                     android:textColor="?attr/colorButton"
                     android:textColorHint="?attr/colorButton"
-                    android:textSize="14sp"
-
-                    />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -172,6 +178,10 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/bg_edit_text_login"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:gravity="center_vertical"
                 android:hint="@string/email_address"
                 android:inputType="textEmailAddress"
@@ -179,9 +189,7 @@
                 android:paddingEnd="5dp"
                 android:textColor="?attr/colorButton"
                 android:textColorHint="?attr/colorButton"
-                android:textSize="14sp"
-
-                />
+                android:textSize="14sp" />
 
 
             <!-- <com.haris.meal4u.EditTextUtil.UbuntuRegularEditText
