--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -39,8 +39,11 @@
         android:layout_alignParentBottom="true"
         android:background="@color/transparent"
         app:itemIconSize="18dp"
+        app:itemTextAppearanceActive="@style/BottomNavigationView"
+        app:itemTextAppearanceInactive="@style/BottomNavigationView"
         app:itemIconTint="@color/bnv_tab_item_foreground"
-        app:labelVisibilityMode="unlabeled" />
+        app:itemTextColor="@color/bnv_tab_item_foreground"
+        app:labelVisibilityMode="labeled" />
 
 </RelativeLayout>
 
