--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,6 +137,11 @@
         <item name="android:windowShowWallpaper">true</item>
     </style>
 
+    <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/ubunt_regular</item>
+    </style>
+
 
     <!-- Text Appearances -->
 
